UI alignment issue fixed on home page

--- a/EmployeeEnrollment/Styles/style.css
+++ b/EmployeeEnrollment/Styles/style.css
@@ -106,6 +106,9 @@ form:after {
 .pull-right {
     float: right;
 }
+.pull-left {
+    float:left;
+}
 
 #content {
     background: #f9f9f9;
